# novomatic-internship-tasks

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt
profiles/: debug.conan  linux-clang-release  linux-gcc-release  release.conan  windows-clang-release  windows-msvc-release
task1/: CMakeLists.txt
task1/app/: main.cpp  server_main.cpp
task1/data/: 01_happy_path.json  02_no_change_possible.json  03_last_ticket_race.json  04_exact_payment_focus.json
task1/include/: change_calculator.hpp  coin_inventory.hpp  console_client_app.hpp  console_client_demo_app.hpp  models.hpp  network_protocol.hpp  paths.hpp  server_console_app.hpp  server_seed_data.hpp  ticket_machine_client.hpp  ticket_server.hpp  ticket_server_host.hpp
task1/src/: change_calculator.cpp  coin_inventory.cpp  console_client_app.cpp  console_client_demo_app.cpp  network_protocol.cpp  server_console_app.cpp  server_seed_data.cpp  ticket_machine_client.cpp  ticket_server.cpp  ticket_server_host.cpp
task1/tests/: .clang-tidy  change_calculator_tests.cpp  concurrency_tests.cpp  network_integration_tests.cpp  server_seed_data_tests.cpp  ticket_server_tests.cpp
task2/: CMakeLists.txt
task2/app/: main.cpp
task2/data/input/: branch.json  chain.json  cycle.json  dense_graph.json  diamond.json  long_labels.json  sample_graph.json  two_components.json
task2/data/output/: sample_graph_out.json
task2/include/: blueprint_file_manager.hpp  blueprint_viewer_app.hpp  blueprint_viewer_panel.hpp  graph.hpp  graph_renderer.hpp  graph_view_controller.hpp  imgui_sfml_context.hpp  json_io.hpp  layout_engine.hpp  paths.hpp  visual_config.hpp
task2/src/: blueprint_file_manager.cpp  blueprint_viewer_app.cpp  blueprint_viewer_panel.cpp  graph.cpp  graph_renderer.cpp  graph_view_controller.cpp  imgui_sfml_context.cpp  json_io.cpp  layout_engine.cpp
task2/tests/: graph_renderer_tests.cpp  graph_tests.cpp  integration_tests.cpp  json_io_tests.cpp  layout_engine_tests.cpp
task3/: CMakeLists.txt
task3/app/: main.cpp
task3/data/: auth_payment_day.txt  case_search_demo.txt  equal_timestamps.txt  malformed_logs.txt  mixed_services_large.txt  production_log.txt  time_range_demo.txt  unsorted_logs.txt
task3/include/: cli_options.hpp  cli_parser.hpp  log_console_app.hpp  log_entry.hpp  log_file_resolver.hpp  log_parser.hpp  log_query.hpp  log_query_engine.hpp  log_store.hpp  paths.hpp
task3/src/: cli_parser.cpp  log_console_app.cpp  log_file_resolver.cpp  log_parser.cpp  log_query_engine.cpp  log_quey_engine.cpp  log_store.cpp
task3/tests/: cli_parser_tests.cpp  log_console_app_tests.cpp  log_file_resolver_tests.cpp  log_parser_tests.cpp  log_query_engine_tests.cpp  log_store_tests.cpp
